# PaperPilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  README_EN.md  docker-compose.yml  pyproject.toml  requirements.txt
.agent/rules/: semantic-api.md
alembic/: env.py
alembic/versions/: 3e4da4693f2d_add_topic_description_to_ruleset.py  529f6b49792a_add_analysis_columns_manual.py
config/: rules.yaml
docs/: pipeline.drawio  pipeline_en.drawio
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: app.spec.js  cost-stats.spec.js  ruleset-dashboard.spec.js  ruleset-list.spec.js  ruleset-wizard.spec.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
scripts/: check_health.py  init_db.py  run_screening_test.py  start.sh  test_e2e.py  verify_s2.py
scripts/archive/: check_env.py  test_openclaw.py  test_openclaw_connection.py  verify_workflow.py  verify_workflow_s2.py
src/: config.py  database.py  main.py
src/models/: __init__.py  app_setting.py  digest.py  email_log.py  paper.py  ruleset.py  task.py
src/prompts/: batch_scoring.md  draft_generation.md  extraction.md  field_overview.md  figure_analysis.md  monthly_report.md  paper_analysis.md  rating.md  summary.md  weekly_digest.md
src/services/: t2s.py  (+26 more)
tests/: __init__.py  conftest.py  test_api.py  test_arxiv.py  test_arxiv_fetcher.py  test_config.py  test_e2e.py  test_impact_scoring.py  test_llm_service.py  test_models.py  test_schemas.py  test_workflows.py
(+56 files in other folders)
